remove debug env var

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,4 @@ password="<twitch-tmi-oauth-token>"
 # channels should be space seperated in this list: "testChannel channel2 twitchbot"
 channels="<channels>"
 
-imgurAccessToken=""
-
-# Boolean, true to enable tmijs debug mode
-hasDebugMode="false"
+imgurAccessToken="<access-token>"
